<resources>
    <string name="add_new_entry">Add New Entry</string>
    <string name="app_name">TheNameQuizApp</string>
    <string name="title">The Name Quiz App</string>
    <string name="take_quiz">Take the quiz</string>
    <string name="see_list">See list</string>
    <string name="add_entry">Add a new entry</string>
    <string name="choose_picture">Choose Picture</string>
    <string name="add">Add</string>
    <string name="profile">profile picture</string>
    <string name="linear_layout_manager">Linear Layout Manager</string>
    <string name="button1">button1</string>
    <string name="button2">button2</string>
    <string name="button3">button3</string>
    <string name="score">Score:</string>
    <string name="submit">Submit</string>
    <string name="result">Submit</string>
    <string name="sortAZ">A-Z</string>
    <string name="sortZA">Z-A</string>
    <string name="back">Back</string>
    <string name="view_all">View All</string>
    <string name="camera">Camera</string>
    <string name="entryImage">Entry Image</string>
    <string name="entry_name">Entry Name</string>
    <string name="guess_button">Guess</string>
    <string name="quiz_label_text">Who is this?</string>
</resources>